tests/specs/ecosystem/zone_x/zone_x/0_3_0.test
zone-x/zone-x/0.3.0
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/src/index.ts
error: TS2304 [ERROR]: Cannot find name 'TimeZone'.
/** Gets users timezone from system settings */ export function getUsersTimeZone(): TimeZone {
                                                                                    ~~~~~~~~
    at file://<tmpdir>/src/index.ts:1:85

TS2304 [ERROR]: Cannot find name 'TimeZone'.
/** Returns a Date object set to custom timezone */ export function setUserTimeZone(timeZone: TimeZone): string {
                                                                                              ~~~~~~~~
    at file://<tmpdir>/src/index.ts:4:95

Found 2 errors.

